src/network_policies/test1monitoring-fluidos-consumer-fe7e79af820a69a41e1b2a319bc2c8d136c6e3bb94703e4d6e383f97125ce09ab07c7d Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1monitoring-fluidos-consumer-fe7e79af820a69a41e1b2a319bc2c8d136c6e3bb94703e4d6e383f97125ce09ab07c7d
  namespace: monitoring-fluidos-consumer-fe7e79
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-fe7e79
      podSelector:
        matchLabels:
          app: product-catalogue
